<resources>
    <string name="app_name">Capstone Project</string>
    <string name="start_driving">Start Driving</string>
    <string name="about_us">About Us</string>
    <string name="image_banner_home">Image Banner Home</string>
    <string name="action_settings">settings</string>
    <string name="action_logout">Logout</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_device_id">Device ID</string>

    <string name="project_title">PotHole Detection</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="sign_up_here">Don\'t have an account? Sign Up</string>
    <string name="sign_in_here">Already have an account? Sign In</string>
    <string name="text_project_description">A 2021 Bangkit Program project in the form of an Android application that connects with the Raspberry Pi to detect potholes while driving and then sends the potholes data along with its location to JAKI.</string>
    <string name="text_creator">Creator</string>
    <string name="stop_review"><![CDATA[Stop & Review]]></string>
    <string name="some_logs_here">Some logs Here</string>

    <string name="text_street">Street Name</string>
    <string name="text_category">Category</string>
    <string name="results">Results</string>
    <string name="coordinate">Coordinate</string>
    <string name="time">Time</string>
    <string name="send_to_jaki">Send To JAKI</string>
    <string name="prof">Jl. Prof. DR. Ir R Rooseno</string>

</resources>