<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary_dark">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/dummy" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:background="@drawable/rounded_edge"
                android:layout_margin="12dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_street"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/text_street" />

                <TextView
                    android:id="@id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/text_category" />

            </LinearLayout>
        </FrameLayout>

    <TextView
        android:id="@+id/tv_coordinate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/coordinate"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="6dp"
        android:textSize="20sp"
        android:textColor="@color/primary_light"
        android:text="@string/time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="bottom"
        android:padding="20dp">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:text="Confirm"
            android:textColor="@color/secondary_dark" />

        <Button
            android:id="@+id/btn_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="6dp"
            android:layout_weight="1"
            android:text="Open in Maps"
            android:textColor="@color/blue"/>


    </LinearLayout>

</LinearLayout>